// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code-generation/code-set/renderCodeSetKeysFile > renders JSDoc comments before union members 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:code-set-keys). DO NOT EDIT.
// Source: code-set-keys.config.ts

export type CodeSetKey =
  /** Menu type classification */
  | "sys.menu.type"
  /** Gender of the user */
  | "sys.user.gender";

declare module "@vef-framework-react/hooks" {
  interface Register {
    codeSetKeys: CodeSetKey;
  }
}
"
`;

exports[`code-generation/code-set/renderCodeSetKeysFile > renders a never union when no entries are provided 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:code-set-keys). DO NOT EDIT.
// Source: code-set-keys.config.ts

export type CodeSetKey = never;

declare module "@vef-framework-react/hooks" {
  interface Register {
    codeSetKeys: CodeSetKey;
  }
}
"
`;

exports[`code-generation/code-set/renderCodeSetKeysFile > renders a single key without a comment 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:code-set-keys). DO NOT EDIT.
// Source: code-set-keys.config.ts

export type CodeSetKey =
  | "sys.menu.type";

declare module "@vef-framework-react/hooks" {
  interface Register {
    codeSetKeys: CodeSetKey;
  }
}
"
`;

exports[`code-generation/code-set/renderCodeSetKeysFile > renders multiple keys in the order provided 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:code-set-keys). DO NOT EDIT.
// Source: code-set-keys.config.ts

export type CodeSetKey =
  | "sys.menu.type"
  | "sys.user.gender"
  | "pmrm.project.stage";

declare module "@vef-framework-react/hooks" {
  interface Register {
    codeSetKeys: CodeSetKey;
  }
}
"
`;
